@@ -1,7 +1,7 @@
 package org.openj9.test.java.lang;
 
 /*******************************************************************************
- * Copyright (c) 1998, 2020 IBM Corp. and others
+ * Copyright (c) 1998, 2022 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -24,20 +24,13 @@ package org.openj9.test.java.lang;
 
 import org.testng.annotations.Test;
 import org.testng.annotations.BeforeMethod;
-import org.openj9.test.support.Support_Exec;
 import org.testng.Assert;
 import org.testng.AssertJUnit;
-import java.io.BufferedWriter;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
-import java.io.FileWriter;
-import java.io.IOException;
 import java.io.InputStream;
 import java.io.PrintStream;
-import java.io.Writer;
-import java.security.Permission;
-import java.util.Enumeration;
 import java.util.Properties;
 
 @Test(groups = { "level.sanity" })
@@ -251,15 +244,6 @@ public class Test_System {
 	}
 
 	/**
-	 * @tests java.lang.System#getSecurityManager()
-	 */
-	@Test
-	public void test_getSecurityManager() {
-		AssertJUnit.assertTrue("Returned incorrect SecurityManager", System
-				.getSecurityManager() == null);
-	}
-
-	/**
 	 * @tests java.lang.System#identityHashCode(java.lang.Object)
 	 */
 	@Test
@@ -334,75 +318,6 @@ public class Test_System {
 			AssertJUnit.assertTrue("wrong line separator returned", ls.equalsIgnoreCase("\n"));
 		} else {
 			AssertJUnit.assertTrue("wrong line separator returned", ls.equalsIgnoreCase("\r\n"));
-		}
-	}
-
-	/**
-	 * @tests java.lang.System#setSecurityManager(java.lang.SecurityManager)
-	 */
-	@Test
-	public void test_setSecurityManager() {
-		/* [PR 97686, 123113] Improve System.setSecurityManager() initialization */
-		class MySecurityManager extends SecurityManager {
-			public void preloadClasses(Permission perm) {
-				if (!(perm instanceof RuntimePermission)
-						|| !perm.getName().toLowerCase().equals(
-								"setsecuritymanager")) {
-					// do nothing, required classes are now loaded
-				}
-			}
-
-			public void checkPermission(Permission perm) {
-				if (!(perm instanceof RuntimePermission)
-						|| !perm.getName().toLowerCase().equals(
-								"setsecuritymanager")) {
-					super.checkPermission(perm);
-				}
-			}
-		}
-
-		MySecurityManager newManager = new MySecurityManager();
-		// preload the required classes without calling implies()
-		try {
-			newManager.preloadClasses(new RuntimePermission("anything"));
-		} catch (SecurityException e) {
-		}
-		try {
-					System.setSecurityManager(new SecurityManager());
-			System.getProperty("someProperty");
-			Assert.fail("should cause SecurityException");
-		} catch (SecurityException e) {
-			// expected
-		} finally {
-					System.setSecurityManager(null);
-		}
-	}
-
-	/**
-	 * @tests java.lang.System#setSecurityManager(java.lang.SecurityManager)
-	 */
-	@Test
-	public void test_setSecurityManager2() {
-		/* [PR 125194] Allow java.security.manager from system ClassLoader */
-		try {
-			String helperName = "org.openj9.test.java.lang.Test_System$TestSecurityManager";
-			String output = Support_Exec.execJava(new String[] {
-					"-Djava.security.manager=" + helperName, helperName },
-					null, true);
-			AssertJUnit.assertTrue("not correct SecurityManager: " + output, output
-					.startsWith(helperName));
-		} catch (Exception e) {
-			Assert.fail("Unexpected: " + e);
-		}
-	}
-
-	/**
-	 * @tests java.lang.System#setSecurityManager(java.lang.SecurityManager)
-	 */
-	public static class TestSecurityManager extends SecurityManager {
-		public static void main(String[] args) {
-			System.out
-					.println(System.getSecurityManager().getClass().getName());
 		}
 	}
 
